force-app/main/default/objects/Lead/fields/Active_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Active_Date_Time__c</fullName>
    <label>Active Date/Time</label>
    <type>DateTime</type>
</CustomField>