force-app/main/default/objects/Lead/fields/Address_Validated__c.field-meta.xml
<CustomField>
    <fullName>Address_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Validated</label>
    <type>Checkbox</type>
</CustomField>