force-app/main/default/objects/Lead/fields/Assigned_Date_TIme__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date_TIme__c</fullName>
    <label>Assigned Date/TIme</label>
    <type>DateTime</type>
</CustomField>