force-app/main/default/objects/Lead/fields/Dead_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Dead_Date_Time__c</fullName>
    <label>Dead Date/Time</label>
    <type>DateTime</type>
</CustomField>