force-app/main/default/objects/Lead/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Google click ID,” the ID that indicates that a customer came from one of your AdWords ads</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>