force-app/main/default/objects/Lead/fields/Implied_Interest__c.field-meta.xml
<CustomField>
    <fullName>Implied_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implied Interest</label>
    <type>Checkbox</type>
</CustomField>