force-app/main/default/objects/Lead/fields/Last_Lead_Marketing_Note_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Marketing_Note_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Lead Marketing Note By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>