force-app/main/default/objects/Lead/fields/Last_Lead_Marketing_Note_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Marketing_Note_Comment__c</fullName>
    <label>Last Lead Marketing Note Comment</label>
    <type>TextArea</type>
</CustomField>