force-app/main/default/objects/Lead/fields/Last_Lead_Marketing_Note_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Marketing_Note_Date_Time__c</fullName>
    <label>Last Lead Marketing Note Date/Time</label>
    <type>DateTime</type>
</CustomField>