force-app/main/default/objects/Lead/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <label>Lead Notes</label>
    <type>TextArea</type>
</CustomField>