force-app/main/default/objects/Lead/fields/Lead_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Formula__c</fullName>
    <formula>TEXT (Status)</formula>
    <label>Lead Status (Formula)</label>
    <type>Text</type>
</CustomField>