force-app/main/default/objects/Lead/fields/Location_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Interest__c</fullName>
    <label>Location of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boston</fullName>
            </value>
            <value>
                <fullName>Chicago</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Denver</fullName>
            </value>
            <value>
                <fullName>Flagstaff</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>LA</fullName>
            </value>
            <value>
                <fullName>Las Vegas</fullName>
            </value>
            <value>
                <fullName>OC</fullName>
            </value>
            <value>
                <fullName>Philadelphia</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
            <value>
                <fullName>Sacramento</fullName>
            </value>
            <value>
                <fullName>San Diego</fullName>
            </value>
            <value>
                <fullName>San Jose</fullName>
            </value>
            <value>
                <fullName>Seattle</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>Sonoma</fullName>
            </value>
            <value>
                <fullName>Tampa</fullName>
            </value>
            <value>
                <fullName>Tucson</fullName>
            </value>
            <value>
                <fullName>Orlando</fullName>
            </value>
            <value>
                <fullName>HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>