force-app/main/default/objects/Lead/fields/Major_Event__c.field-meta.xml
<CustomField>
    <fullName>Major_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Major_Event__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Major_Event__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>