force-app/main/default/objects/Lead/fields/MQL_date__c.field-meta.xml
<CustomField>
    <fullName>MQL_date__c</fullName>
    <label>MQL date</label>
    <type>Date</type>
</CustomField>