force-app/main/default/objects/Lead/fields/printsf__PrintSF_Last_Address_Fail_Date__c.field-meta.xml
<CustomField>
    <fullName>printsf__PrintSF_Last_Address_Fail_Date__c</fullName>
    <description>The last date a User ran a PrintSF Mail List and clicked to post address failures which included this Lead</description>
    <inlineHelpText>The last date a User ran a PrintSF Mail List and clicked to post address failures which included this Lead</inlineHelpText>
    <label>PrintSF Last Address Fail Date</label>
    <type>DateTime</type>
</CustomField>