force-app/main/default/objects/Lead/fields/printsf__PrintSF_Last_Mailer_Status__c.field-meta.xml
<CustomField>
    <fullName>printsf__PrintSF_Last_Mailer_Status__c</fullName>
    <description>The last delivery status updated from the most recent Mailer History related to this Lead. Values may include Cancelled, Pending, Delivered, Returned and Not Tracked</description>
    <inlineHelpText>The last delivery status updated from the most recent Mailer History related to this Lead. Values may include Cancelled, Pending, Delivered, Returned and Not Tracked</inlineHelpText>
    <label>PrintSF Last Mailer Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>