force-app/main/default/objects/Lead/fields/printsf__PrintSF_Last_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>printsf__PrintSF_Last_Template_ID__c</fullName>
    <description>The PrintSF Template ID (a number) from the most recent Mailer History related to this Lead.  Typically used to trigger follow on Salesforce workflows or emails, or next steps in Marketing Automation platforms.</description>
    <inlineHelpText>The PrintSF Template ID (a number) from the most recent Mailer History related to this Lead.  Typically used to trigger follow on Salesforce workflows or emails, or next steps in Marketing Automation platforms.</inlineHelpText>
    <label>PrintSF Last Template ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>