force-app/main/default/objects/Lead/fields/printsf__PrintSF_Last_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>printsf__PrintSF_Last_Template_Name__c</fullName>
    <description>The PrintSF Template Name from the most recent Mailer History related to this Lead.</description>
    <inlineHelpText>The PrintSF Template Name from the most recent Mailer History related to this Lead.</inlineHelpText>
    <label>PrintSF Last Template Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>