force-app/main/default/objects/Lead/fields/Prospect_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Date_Time__c</fullName>
    <label>Prospect Date/Time</label>
    <type>DateTime</type>
</CustomField>