force-app/main/default/objects/Lead/fields/Qualification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Date_Time__c</fullName>
    <label>Qualification Date/Time</label>
    <type>DateTime</type>
</CustomField>