force-app/main/default/objects/Lead/fields/Ready_to_Convert_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Convert_Date_Time__c</fullName>
    <label>Ready to Convert Date/Time</label>
    <type>DateTime</type>
</CustomField>