force-app/main/default/objects/Lead/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lead_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Answering Machine</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Email Request</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Appointment Set</fullName>
            </value>
            <value>
                <fullName>ERA Pending</fullName>
            </value>
            <value>
                <fullName>DO NOT CALL</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>No Longer with Company</fullName>
            </value>
            <value>
                <fullName>Signed ERA/MSA</fullName>
            </value>
            <value>
                <fullName>Client moved to Contact no ERA</fullName>
            </value>
            <value>
                <fullName>Call Pending</fullName>
                <isActive>false</isActive>
                <label>Call Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>