force-app/main/default/objects/Lead/fields/Regional_Location__c.field-meta.xml
<CustomField>
    <fullName>Regional_Location__c</fullName>
    <label>Regional Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>