force-app/main/default/objects/Lead/fields/Rich_Text_test__c.field-meta.xml
<CustomField>
    <fullName>Rich_Text_test__c</fullName>
    <label>Rich Text test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>