force-app/main/default/objects/Lead/fields/Service_Needed_Location__c.field-meta.xml
<CustomField>
    <fullName>Service_Needed_Location__c</fullName>
    <label>Service Needed (Location)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fire and Smoke Damage</fullName>
            </value>
            <value>
                <fullName>Water Damage</fullName>
            </value>
            <value>
                <fullName>Mold Remediation</fullName>
            </value>
            <value>
                <fullName>Asbestos Abatement</fullName>
            </value>
            <value>
                <fullName>Emergency Response</fullName>
            </value>
            <value>
                <fullName>Reconstruction Services</fullName>
            </value>
            <value>
                <fullName>Catastrophe Response</fullName>
            </value>
            <value>
                <fullName>Restoration and Cleaning</fullName>
            </value>
            <value>
                <fullName>Contents Cleaning</fullName>
            </value>
            <value>
                <fullName>Biohazard Decontamination</fullName>
            </value>
            <value>
                <fullName>Demolition Services</fullName>
            </value>
            <value>
                <fullName>Consulting Services</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>