force-app/main/default/objects/Lead/fields/smartystreets__Address_Do_Not_Verify__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Do_Not_Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box so that the address is never verified by the SmartyStreets service</description>
    <inlineHelpText>Check this box so that the address is never verified by the SmartyStreets service</inlineHelpText>
    <label>Address Do Not Verify</label>
    <type>Checkbox</type>
</CustomField>