force-app/main/default/objects/Lead/fields/smartystreets__Address_Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Last_Verified__c</fullName>
    <inlineHelpText>When was this address last verified?</inlineHelpText>
    <label>Address Last Verified</label>
    <type>DateTime</type>
</CustomField>