force-app/main/default/objects/Lead/fields/smartystreets__Address_Latitude__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Latitude__c</fullName>
    <description>Latitude for the Geo-Coded, Verified Address</description>
    <inlineHelpText>Latitude for the Geo-Coded, Verified Address</inlineHelpText>
    <label>Address Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>