force-app/main/default/objects/Lead/fields/smartystreets__Address_Return_Code__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Return_Code__c</fullName>
    <inlineHelpText>Status returned by the verification service</inlineHelpText>
    <label>Address Return Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>