force-app/main/default/objects/Lead/fields/smartystreets__Address_Status__c.field-meta.xml
<CustomField>
    <fullName>smartystreets__Address_Status__c</fullName>
    <description>Shows return code plus icon</description>
    <formula>If(smartystreets__Address_Return_Code__c = &quot;Confirmed&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Confirmed&quot;, 16, 16) &amp; &quot; Confirmed&quot;, 
/*	TO BE USED IF YOU WANT EXTRA INTERNATIONAL STATUS INFO
If(and(smartystreets__Address_Return_Code__c = &quot;Confirmed&quot;, or(isblank(smartystreets__AddressPrecision__c), not(contains(&quot;Thoroughfare:Locality:Administrative Area&quot;, smartystreets__AddressPrecision__c)))), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Confirmed&quot;, 16, 16) &amp; &quot; Confirmed&quot;, 
If(and(smartystreets__Address_Return_Code__c = &quot;Confirmed&quot;, contains(&quot;Thoroughfare:Locality:Administrative Area&quot;, smartystreets__AddressPrecision__c)), IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - May be Undeliverable&quot;, 16, 16) &amp; &quot; Confirmed - Down to the &quot; + smartystreets__AddressPrecision__c, 
	*/
If(smartystreets__Address_Return_Code__c = &quot;Partial&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - Partially&quot;, 16, 16) &amp; &quot; Confirmed - Partially&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Confirmed - By Dropping Secondary Info&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - By Dropping Secondary Info&quot;, 16, 16) &amp; &quot; Confirmed - By Dropping Secondary Info&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Confirmed - Missing Secondary Info&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Confirmed - Missing Secondary Info&quot;, 16, 16) &amp; &quot; Confirmed - Missing Secondary Info&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Bad or Blank Address&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Blank Address&quot;, 16, 16) &amp; &quot; Bad or Blank Address&quot;, 
/* TO BE USED IF YOU WANT TO SEPARATE BAD FROM BLANK ADDRESSES
If(and(smartystreets__Address_Return_Code__c = &quot;Bad or Blank Address&quot;, or(isblank(Street), and(isblank(PostalCode), or(isblank(State), isblank(City))))), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Blank Address&quot;, 16, 16) &amp; &quot; Blank Address&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Bad or Blank Address&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Bad Address&quot;, 16, 16) &amp; &quot; Bad Address&quot;,*/ 
If(smartystreets__Address_Return_Code__c = &quot;Not Submitted&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Submitted&quot;, 16, 16) &amp; &quot; Not Submitted&quot;, 
If(smartystreets__Address_Return_Code__c = &quot;Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Confirmed&quot;, 16, 16) &amp; &quot; Not Confirmed&quot;, IMAGE(&quot;/img/msg_icons/info16.png&quot;, &quot;Not Yet Verified&quot;, 16, 16) &amp; &quot; Not Yet Verified&quot;)))))))/*))*/</formula>
    <inlineHelpText>Confirmed
Not Confirmed
Confirmed - By Dropping Secondary Info
Confirmed - Missing Secondary Info
Confirmed - May be Undeliverable
Not Submitted</inlineHelpText>
    <label>Address Status</label>
    <type>Text</type>
</CustomField>