force-app/main/default/objects/Lead/fields/SQL_date__c.field-meta.xml
<CustomField>
    <fullName>SQL_date__c</fullName>
    <label>SQL date</label>
    <type>Date</type>
</CustomField>