force-app/main/default/objects/Lead/fields/ZI_Calculated_Management_Level__c.field-meta.xml
<CustomField>
    <fullName>ZI_Calculated_Management_Level__c</fullName>
    <label>ZI Calculated Management Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>