force-app/main/default/objects/Lead/fields/ZI_City__c.field-meta.xml
<CustomField>
    <fullName>ZI_City__c</fullName>
    <label>ZI City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>