force-app/main/default/objects/Lead/fields/ZI_Company_Description__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Description__c</fullName>
    <label>ZI Company Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>