force-app/main/default/objects/Lead/fields/ZI_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_ID__c</fullName>
    <label>ZI Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>