force-app/main/default/objects/Lead/fields/ZI_Company_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Profile_URL__c</fullName>
    <label>ZI Company Profile URL</label>
    <type>Url</type>
</CustomField>