force-app/main/default/objects/Lead/fields/ZI_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>ZI_Company_Website__c</fullName>
    <label>ZI Company Website</label>
    <type>Url</type>
</CustomField>