force-app/main/default/objects/Lead/fields/ZI_Country__c.field-meta.xml
<CustomField>
    <fullName>ZI_Country__c</fullName>
    <label>ZI Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>