force-app/main/default/objects/Lead/fields/ZI_Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>ZI_Direct_Phone__c</fullName>
    <label>ZI Direct Phone</label>
    <type>Phone</type>
</CustomField>