force-app/main/default/objects/Lead/fields/ZI_Education__c.field-meta.xml
<CustomField>
    <fullName>ZI_Education__c</fullName>
    <label>ZI Education</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>