force-app/main/default/objects/Lead/fields/ZI_Email_Matches_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ZI_Email_Matches_Company_Name__c</fullName>
    <label>ZI Email Matches Company Name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>