force-app/main/default/objects/Lead/fields/ZI_Employment_History__c.field-meta.xml
<CustomField>
    <fullName>ZI_Employment_History__c</fullName>
    <label>ZI Employment History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>