force-app/main/default/objects/Lead/fields/ZI_Is_Known_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>ZI_Is_Known_Full_Name__c</fullName>
    <label>ZI Is Known Full Name?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>