force-app/main/default/objects/Lead/fields/ZI_Is_Malformed_Email__c.field-meta.xml
<CustomField>
    <fullName>ZI_Is_Malformed_Email__c</fullName>
    <label>ZI Is Malformed Email?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>