force-app/main/default/objects/Lead/fields/ZI_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>ZI_Job_Function__c</fullName>
    <label>ZI Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>